# bdocodex-scrape

./: .gitignore  README.md  pyproject.toml
scripts/: asset-image-scraper.py
