[tool.poetry]
name = "bdocodex-scrape"
version = "0.1.0"
description = "A Python project that scrapes BDO Codex for various types of data."
authors = ["Francis Phan <francis.c.phan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.4.3"
requests = "^2.28.1"
Pillow = "^9.2.0"
webdriver-manager = "^3.8.3"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
